output/history/v4/spec.md
<!--
  아카이브: v4 백테스트 실행 시점의 스펙 문서 (2026-08-05)
  메모: Max 2% Rule + R 기반 포지션 사이징 (시장국면 R + 연속성 R)
-->

# 백테스트 조건 명세서 (Backtest Spec)

- **전략 이름**: **52주 신고가 모멘텀 v4 — R 기반 포지션 사이징**
- **한 줄 요약**: 시총 1조 이상 종목 중 52주 신고가 + ATR 이상 상승 + 거래대금 2.5배 급증 + **지수 대비 상대강도(RS) 우위**를 모두 만족한 날 종가 매수, **Max 2% Rule 기반 R 단위로 투입금 조절**, -8% 트레일링 스탑으로 청산
- **버전 이력**
  - v1 (26.08.03) — 매물대 방식 폐기, 52주 신고가 3조건 확정. 유니버스는 시총 1조 이상
  - v2 (26.08.04) — RS(상대강도) 조건 추가 + **시가총액 필터 제거** → 실패
    (CAGR -18.78%. 소형주 편입으로 신호 품질이 1/5로 하락하고 거래 3.3배 증가로 비용에 잠식)
  - v3 (26.08.05) — v2의 RS 조건은 유지하고 **시가총액 필터(1조)를 복원**.
    사실상 "v1 + RS" (CAGR +4.32%, MDD -39.27%)
  - **v4 (26.08.05) — 본 문서**. 진입 조건은 v3와 동일하고 **포지션 사이징만 변경**:
    고정 12.5% → **Max 2% Rule 기반 R 단위 가변(8.33%~25%)**. §5-1~5-4
  - 실행 결과의 버전별 비교는 [output/CHANGELOG.md](output/CHANGELOG.md)

> **문서 원칙**: 이 문서가 전략의 단일 기준(single source of truth)이며 **항상 최신
> 버전만** 담습니다. 조건이 바뀌면 ① 이 문서를 갱신하고 ② 버전을 올리고 ③ 백테스트를
> 다시 돌려 `output/report.md`를 새로 산출하고 ④ **스펙과 리포트를 한 쌍으로**
> `output/history/v{N}/`에 보관하며 ⑤ 변경 내용과 지표 변화를 `output/CHANGELOG.md`에
> 기록합니다. ④는 `python src/archive_version.py v{N} "설명"` 로 실행합니다.

---

## 1. 유니버스 (대상 종목)

| 항목 | 내용 |
|---|---|
| 시장 | KOSPI + KOSDAQ (KONEX 제외) |
| 시가총액 필터 | **1조원 이상** (월말 기준) — v3에서 복원 |
| 거래대금 필터 | 없음 (시총 필터가 사실상 유동성 하한 역할) |
| 주가 필터 | 종가 1,000원 이상 (월말 기준) |
| 상장 기간 | 250거래일 이상 |
| 재구성 주기 | **매월 말** — 월말 기준을 통과하면 다음 달 한 달간 매수 대상 |

**제외 종목**

- [x] 우선주 — 종목코드 끝자리가 0이 아닌 것 제외
- [x] 스팩(SPAC) · 기업인수목적 · 리츠 — 종목명 토큰으로 제외
- [x] KONEX
- [x] 상장 250거래일 미만 신규주
- [ ] 관리종목 · 투자경고 · 거래정지 — **미구현** (아래 한계 참고)

### 1-1. v3 변경점: 시가총액 필터 복원

v2에서 시총 필터를 제거해 유니버스를 월평균 214 → 1,905종목(누적 555 → 2,479종목)으로
넓혔으나 **실패했습니다** (CAGR +3.83% → -18.78%). 4,869건의 트레이드를 분석한 결과
원인이 명확했습니다.

| | v1 (시총 1조) | v2 (필터 없음) |
|---|---|---|
| 트레이드당 원(原)edge (비용 제외) | +0.751% | **+0.155%** |
| 연간 거래 횟수 | 139건 | **460건** |
| 연간 비용 드래그 | 7.1% | **23.6%** |

소형주 신고가 돌파는 **신호 품질 자체가 대형주의 1/5 수준**이었고, 후보가 늘어난 만큼
거래가 3.3배로 폭증해 왕복 비용 0.411%가 누적되며 전략을 잠식했습니다. 진입의 75.9%가
시총 1조 미만(중앙값 2,869억)이었습니다.

**따라서 v3는 시총 1조원 하한을 복원합니다.** v2에서 도입한 RS 조건은 그대로 유지하므로,
v3는 사실상 **"v1 + RS"** 이며 v1과 비교하면 **RS 조건 단독의 순효과**를 측정할 수 있습니다.

- **시점 기준**: 모든 필터를 **매월 말 시점 기준**으로 판정합니다(look-ahead 방지).
  "지금 시총 1조 이상인 종목"으로 10년을 돌리면 크게 성장할 종목을 미리 골라놓는 셈이 되므로,
  매 시점의 실제 시가총액으로 유니버스를 다시 만듭니다.

⚠️ **유동성**: v2에서 우려했던 리스크는 시총 하한 복원으로 해소됩니다. 참고로 v2에서도
실측상 문제는 크지 않았는데(매수금액이 당일 거래대금의 1%를 넘는 경우 0.6%), 조건3(거래대금
2.5배 급증)이 자연히 거래가 활발한 날만 고르기 때문입니다.

⚠️ **상장폐지 종목**: 데이터 소스가 현재 상장 종목 위주라 상폐 종목이 충분히 포함되지 않아
**생존편향이 남아 있습니다.** 다만 시총 1조 이상 대형주는 상폐가 드물어 v2보다 영향이 작습니다.

---

## 2. 기간 및 데이터

| 항목 | 내용 |
|---|---|
| 백테스트 기간 | **2016-01-04 ~ 2026-07-31** (약 10년 7개월, 2026년은 부분 연도) |
| 데이터 확보 기간 | 2015-01-01 ~ (지표 워밍업용. RS는 252거래일, 52주 신고가는 250거래일 필요) |
| 봉 주기 | 일봉 |
| 거래일 달력 | 코스피 지수 거래일(2,594일) — 개별 종목 거래일의 상위집합 |

### 2-1. 데이터 소스 및 역할 분담

| 소스 | 받는 것 | 쓰는 곳 | 캐시 위치 |
|---|---|---|---|
| KRX finder | 종목 코드/이름/시장 | 유니버스 뼈대 | `data/tickers.csv` |
| 다음 금융 | 원주가 OHLC, **거래대금**, 상장주식수 | 거래대금 급증 판정, 유니버스 주가 필터 | `data/daum/{code}.csv` |
| 네이버 siseJson | **수정주가** OHLCV | 신고가·ATR·이동평균·RS 등 모든 지표 | `data/naver/{code}.csv` |
| 네이버 siseJson | 코스피/코스닥 **지수** 일봉 | RS 벤치마크 | `data/index/{KOSPI,KOSDAQ}.csv` |

> 주가는 수정주가를 써야 액면분할에 지표가 왜곡되지 않고, 거래대금·시총은 '금액'이라
> 분할과 무관한 원본값이 정확합니다. 그래서 두 소스를 날짜로 결합해 씁니다.

### 2-2. 데이터 캐싱 원칙

**원천 데이터는 한 번 받아서 파일로 보관하고 재요청하지 않습니다.** 매 백테스트마다
외부에 다시 요청하지 않도록 아래 원칙을 코드로 강제합니다.

| 구분 | 대상 | 정책 |
|---|---|---|
| **원천 데이터** | `data/daum/`, `data/naver/`, `data/index/`, `data/tickers.csv` | 영구 캐시. 파일이 있으면 건너뜀 |
| **파생 캐시** | `data/universe.pkl` | 유니버스 **필터 조건 서명**을 함께 저장. `config.py` 값이 바뀌면 자동 재계산 |
| **산출물** | `output/` 전체 | 실행할 때마다 항상 새로 생성 |

> 파생 캐시에 서명을 붙이는 이유: 필터 조건을 바꿨는데 낡은 캐시를 그대로 쓰면
> 스펙과 결과가 어긋납니다. v2 작업 중 실제로 이 문제를 겪어 도입했습니다.

---

## 3. 매수 조건 (진입)

아래 **4개 조건을 모두(AND)** 만족한 날 **당일 종가**에 매수합니다.

### 3-1. 진입 조건

| # | 조건 | 정의 | 파라미터 |
|---|---|---|---|
| 1 | **52주 신고가 (장중)** | 당일 **고가** > 직전 250거래일(당일 제외) 최고 **고가** | 룩백 250일 |
| 2 | **ATR 이상 상승** | 당일 종가 − 전일 종가 ≥ ATR(14) | ATR 기간 14 |
| 3 | **거래대금 급증** | 당일 거래대금 ≥ 20일 거래대금 SMA × **2.5** | 배수 2.5 |
| 4 | **RS 우위** (v2~) | 종목 RS ≥ 소속 지수(코스피/코스닥) RS | 분기 63거래일 |

⚠️ **조건 4의 실측 효과 (v2 측정)**: RS 조건은 전체 시그널의 **7.9%만 차단**했습니다
(20,494건 → 18,872건). 조건 1(52주 신고가)을 통과한 종목은 이미 대부분 지수를 이긴
상태라 **RS가 신고가 조건에 상당 부분 흡수**되기 때문입니다. v3는 대형주 유니버스에서
이 순효과를 다시 측정합니다.

**수치 예시**

```
  전일 종가          10,000원
  당일 종가          10,600원      상승폭 = +600원
  ATR(14)               500원  →  600 ≥ 500                  ✅ 조건 2

  20일 평균 거래대금  100억원
  당일 거래대금       270억원  →  270 ≥ 100 × 2.5            ✅ 조건 3

  당일 고가            10,900원
  직전 250일 최고 고가 10,750원 → 10,900 > 10,750            ✅ 조건 1

  종목 RS 백분위          82
  코스피 RS 백분위        75   →  82 ≥ 75                    ✅ 조건 4

  → 당일 종가 10,600원에 매수
```

> 조건 1은 **장중 고가**로 판정하므로, 장중에 신고가를 찍었다가 종가가 밀려도 진입합니다.

### 3-2. RS(상대강도) 조건 상세 ⭐v2 신규

윌리엄 오닐(William O'Neil)의 **RS Rating** 방식을 따릅니다. 국내 구현 사례
([dalinaum/rs](https://github.com/dalinaum/rs))의 소스로 공식을 검증했습니다.

**1단계 — Raw score** (1분기 = 63거래일, 총 252거래일 필요)

```
score_1 = 오늘종가     / 1분기전종가      ← 최근 분기, 가중치 2배
score_2 = 1분기전종가  / 2분기전종가
score_3 = 2분기전종가  / 3분기전종가
score_4 = 3분기전종가  / 4분기전종가

raw = score_1 × 2 + score_2 + score_3 + score_4
```

최근 분기에 2배 가중치를 주어 "최근에 강한 종목"을 우대합니다.

**2단계 — 백분위 환산 및 비교**

표준 RS Rating은 이 raw score를 전체 종목 기준 1~100 백분위로 환산합니다. 여기에
**코스피/코스닥 지수를 "가상 종목"처럼 유니버스에 포함**시켜 함께 순위를 매기면,
지수도 그날의 자기 RS 백분위를 갖게 됩니다. 그러면 매수 조건을 이렇게 정의할 수 있습니다.

```
종목의 RS 백분위  ≥  그 종목이 속한 지수의 RS 백분위
```

**벤치마크 매핑**: 코스피(STK) 종목 → 코스피 지수, 코스닥(KSQ) 종목 → 코스닥 지수

> ⚠️ **지수를 랭킹에 포함시켜 "지수 자신의 RS 백분위"를 구하는 것은 표준 O'Neil 방식이
> 아니라 이번 전략을 위해 확장한 부분입니다.** 원래 RS Rating은 종목 간 상대 순위만
> 정의하며 지수는 랭킹 대상이 아닙니다.

**구현 노트**: 같은 날 cross-section 안에서 백분위는 raw score의 순서를 그대로 보존하는
단조 변환입니다. 따라서 위 조건은 (동점이 아닌 한) **`종목 raw ≥ 지수 raw`** 와 결과가
같습니다. 실제 구현은 수천 종목 × 전체 거래일 순위 행렬을 만들지 않고 이 단순 비교로
계산합니다(순위 행렬은 메모리 부담이 큼).

### 3-3. 지표 계산 방식

| 지표 | 계산 |
|---|---|
| **ATR(14)** | Wilder 평활(RMA). TR = max(고가−저가, \|고가−전일종가\|, \|저가−전일종가\|) |
| **거래대금 SMA(20)** | 당일 **제외** 직전 20거래일 거래대금의 단순평균 |
| **52주 최고가** | 당일 **제외** 직전 250거래일 **고가**의 최댓값 |
| **RS raw score** | §3-2 공식. 당일 종가 포함 (모든 종목·지수가 동일 시점 기준이라 편향 없음) |
| **SMA(20)** | 청산용. 종가 기준 단순이동평균, 당일 포함 |

> 조건 1~3의 기준값은 모두 **당일을 제외한 과거 데이터**로 만들고 당일 값과 비교합니다.

### 3-4. 부가 필터

| # | 조건 | 값 |
|---|---|---|
| 5 | 중복 방지 | 이미 보유 중인 종목은 재진입 불가 (청산 후에는 즉시 가능) |
| 6 | 상한가 제외 | 당일 상한가(+29.5% 이상) 마감이면 제외 — 종가 매수 체결 불가 |
| 7 | 유니버스 조건 | §1 필터를 **시그널 발생 시점(월말 기준)** 으로 통과 |
| 8 | 워밍업 | 지표 계산에 필요한 과거 데이터가 부족하면 제외 |

### 3-5. 체결

- **시그널 발생일 종가**에 매수 (확정)

⚠️ **알려진 한계 — 종가 매수의 미세한 미래참조**
  실전에서는 15:20 동시호가에 주문하므로 최종 종가를 알 수 없고 예상체결가로 근사합니다.
  또 15:20 시점 거래대금은 최종 거래대금보다 작습니다.
  → 완전히 제거할 수 없는 편향이며, §6의 슬리피지(0.1%)로 일부 흡수한다고 가정합니다.

---

## 4. 매도 조건 (청산) — v1에서 변경 없음

### 4-1. 규칙 요약

| # | 규칙 | 내용 | 청산 비중 |
|---|---|---|---|
| A | **트레일링 스탑** | 보유 중 **최고가 대비 -8%** | 전량 |
| B | **부분 익절** | 매수가 대비 **+24%** 도달 | 보유 수량의 **30%** (포지션당 1회만) |
| C | **추세 이탈** | **종가**가 20일 이동평균선 하향 이탈 | 잔량 전량 |

- 진입 시점의 기준선 = 매수가 × 0.92 → **초기 손절은 -8%**
- 최고가는 **장중 고가**로 갱신되며, 기준선 `S`는 **오르기만 하고 내려가지 않음**
- B 실행 후 남은 70%도 **동일한 전체 고점 기준**의 트레일링 스탑을 유지

### 4-2. 체결 가격

기준선 `S` = (전일까지의 최고가 × 0.92) 라 할 때, 매일 아래 **순서대로** 판정합니다.

| 순서 | 상황 | 체결 가격 | 비중 |
|---|---|---|---|
| 1 | **20일선 이탈 예약분** (전일 종가 < SMA20) | 당일 시가 | 잔량 전량 |
| 2 | **갭하락** — 당일 시가 ≤ S | **당일 시가** (S보다 아래에서 체결) | 전량 |
| 3 | **장중 터치** — 당일 저가 ≤ S | **S 가격** (스탑 주문 체결) | 전량 |
| 4 | **부분 익절** — 당일 고가 ≥ 매수가 × 1.24 | 목표가 (매수가 × 1.24) | 30% |
| 5 | 고점·스탑 갱신, 종가 < SMA20이면 익일 청산 예약 | — | — |

⚠️ **같은 날 여러 조건이 겹칠 때**: 위 순서대로 처리하되, **2 또는 3이 발생하면 전량
청산되므로 4·5는 무시**합니다.
  → 일봉만으로는 고가·저가 도달 순서를 알 수 없어, 손실을 먼저 인정하는 보수적 관행을 따릅니다.
  → 즉 "장중 +24%를 찍고 같은 날 스탑까지 밀린 날"은 부분 익절 없이 전량 손절로 계산됩니다.

⚠️ **기준선 갱신 시점 (순환 참조 방지)**: `S`는 **전일까지의 최고가**로 확정한 뒤 당일
저가와 비교하고, 고점 갱신은 당일 판정이 끝난 뒤 반영합니다.

**진입 당일 처리**: 당일 종가에 매수하므로 청산 판정은 **다음 거래일부터** 시작합니다.
**거래정지·미상장 구간**: 데이터가 없는 날은 판정을 건너뛰고 보유를 유지합니다.
**강제 청산**: 백테스트 종료일에 미청산 포지션은 마지막 종가로 청산하고 통계에 포함합니다.

### 4-3. 청산 사유 코드

`TRAIL_GAP` (갭하락 스탑) / `TRAIL_INTRA` (장중 스탑) / `MA20_EXIT` (20일선 이탈) /
`EOD_FORCE` (종료일 강제청산)

> 부분 익절은 포지션을 닫지 않으므로 별도 청산 사유가 아니라 트레이드의 `partial_tp`
> 플래그로 기록됩니다.

---

## 5. 포지션 및 자금 관리

| 항목 | 내용 |
|---|---|
| 초기 자본금 | **100,000,000원** (1억) |
| 최대 동시 보유 종목 수 | **8종목** |
| 종목당 투자 비중 | **R 기반 가변 (자산의 8.33% ~ 25%)** — §5-1 ⭐v4 변경 |
| 복리 운용 | 예 (수익금 재투자) |
| 같은 종목 재진입 | 허용 (보유 중에는 불가) |
| 분할 매수(피라미딩) | 불가 |
| 시그널이 슬롯보다 많을 때 | **거래대금 큰 순** — 유동성 우선 |
| 현금 부족 시 | 가능한 수량만 매수 (1주도 못 사면 건너뜀) |
| 최소 거래 단위 | 1주 |

### 5-1. Max 2% Rule 과 R 단위 ⭐v4 신규

**Max 2% Rule**: 1회 매매에서 잃을 수 있는 최대 금액을 총자산의 **2%** 로 제한합니다.
손절폭이 §4의 트레일링 스탑 -8% 이므로, 역산하면 최대 투입금이 정해집니다.

```
최대 투입금 = 최대손실 2% ÷ 손절폭 8% = 총자산의 25%
```

이 최대 투입금(25%)을 **6R** 로 정의합니다. 따라서

```
1R = 총자산의 25% ÷ 6 = 총자산의 4.1667%
```

자산 1억 기준으로 1R = 4,166,667원, 6R = 25,000,000원입니다.
6R 을 -8% 에 손절하면 손실은 정확히 자산의 2% 가 됩니다.

### 5-2. 투입 R 결정 — 시장국면 R + 연속성 R

투입금은 **두 요소의 합**으로 정해지며, 각각 1~3R 이라 총합은 **2R ~ 6R** 입니다.

| 구성 | 범위 | 결정 방식 |
|---|---|---|
| **① 시장국면 R** | 1~3R | 약세 **1R** / 횡보 **2R** / 강세 **3R** |
| **② 연속성 R** | 1~3R | **1R 로 시작**. 성공하면 +1R, 실패하면 -1R |

```
투입금 = (시장국면 R + 연속성 R) × 1R
```

| 상황 | 투입 R | 자산 대비 | 1억 기준 |
|---|---|---|---|
| 약세장 + 연패 | **2R** | 8.33% | 833만원 |
| 횡보장 + 중립 | 4R | 16.67% | 1,667만원 |
| 강세장 + 연승 | **6R** | 25.00% | 2,500만원 |

**① 시장국면 판정** — 종목이 속한 시장의 지수(코스피/코스닥)로 판정합니다.

| 국면 | 조건 | R |
|---|---|---|
| **강세** | 지수 > MA200 **이고** MA200 상승 중 | 3R |
| **약세** | 지수 < MA200 **이고** MA200 하락 중 | 1R |
| **횡보** | 그 외 (위치와 기울기가 엇갈림) | 2R |

- MA200 = 지수 종가의 200일 단순이동평균
- "상승/하락 중" = MA200 이 **20거래일 전보다** 높으면 상승, 낮으면 하락
  (하루 차분은 추세 전환 부근에서 부호가 자주 뒤집혀 국면이 요동칩니다)
- 실측 분포: 코스피 약세 32% / 횡보 16% / 강세 52%, 국면 평균 지속 22거래일

**② 연속성 R** — 계좌 전체에 **하나의 카운터**를 두고, 포지션이 청산될 때 갱신하여
그 이후 진입하는 포지션에 적용합니다. 1R 로 시작하며 1R 미만·3R 초과로는 가지 않습니다.

### 5-3. 성공 / 실패 판정 ⭐v4 신규

연속성 R 을 올릴지 내릴지 결정하는 기준입니다.

| 판정 | 기준 | 연속성 R |
|---|---|---|
| **성공** | 주가가 **+24% 에 도달**(부분익절 트리거)한 경우. 이후 20일선 이탈로 손절하든 익절하든 무관 | **+1R** |
| **실패** | 그 외 **전부** — 손실 청산은 물론, **+24% 에 못 닿고 수익으로 끝난 경우도 실패** | **-1R** |

> ⚠️ **이분법입니다.** 예컨대 20일선 이탈로 +10% 에 청산해도 +24% 에 닿지 않았으므로
> 실패로 계산해 포지션을 줄입니다. "성공의 기준은 24% 도달"을 엄격히 적용한 결과입니다.

### 5-4. 현금 제약

6R(25%)씩 잡으면 4종목만으로 자산이 소진되므로, 최대 8종목을 다 채우지 못하는 경우가
생깁니다. 현금이 목표 R 에 못 미치면 **가능한 수량만 매수**하며, 이 경우 트레이드 기록에
`capped=True` 로 남겨 분석 시 구분합니다.

---

## 6. 거래 비용

| 항목 | 값 |
|---|---|
| 매수 수수료 | 0.015% |
| 매도 수수료 | 0.015% |
| 거래세 (매도) | 0.18% |
| 슬리피지 | 0.1% (매수/매도 각각) |

---

## 7. 최종 리포트

### 7-1. 연도별 성과 테이블

| 항목 | 정의 |
|---|---|
| 거래횟수 | 해당 연도에 **청산 완료된** 트레이드 수 |
| 연수익률 | (연말 총자산 / 연초 총자산) − 1 · 미실현 평가금 포함 |
| 승률 | 수익 트레이드 수 / 전체 트레이드 수 (비용 차감 후, 0%는 패배 처리) |
| 평균 수익 | 수익 트레이드들의 수익률 산술평균 |
| 평균 손실 | 손실 트레이드들의 손실률 산술평균 (음수 표기) |
| 손익비 | 평균 수익 ÷ \|평균 손실\| |
| MDD | 해당 연도 **일별 총자산 곡선** 기준 최대 낙폭 (연초 고점 리셋) |
| 전체 행 | 연수익률은 CAGR, MDD는 전체 기간 통합 기준 |

> **MDD 해석 주의**: 개별 트레이드 손절은 -8%지만 MDD는 8종목 포트폴리오 전체 자산곡선의
> 최고점 대비 낙폭이므로, 손실 트레이드가 반복 누적되면 -8%를 훨씬 넘습니다. 둘은 다른
> 층위의 지표입니다.

### 7-2. 산출물

| 파일 | 내용 |
|---|---|
| `output/report.md` | **최신 버전** 연도별 성과 + 청산 사유별 통계 + 자산 곡선 |
| `output/trades.csv` | 전체 트레이드 목록 |
| `output/equity.csv` | 일별 자산 곡선 |
| `output/equity_curve.png` | 자산 곡선 + 낙폭 그래프 |
| `output/CHANGELOG.md` | **버전별 변경 내용과 지표 변화 비교** |
| `output/history/v{N}/spec.md` | 그 버전 실행에 쓴 **스펙 문서** |
| `output/history/v{N}/report.md` | 그 버전의 **결과 리포트** |

> 스펙과 리포트는 **반드시 한 쌍으로** 보관합니다. 스펙만 있으면 결과를 알 수 없고,
> 리포트만 있으면 어떤 조건에서 나온 숫자인지 알 수 없기 때문입니다.
> 백테스트 직후 `python src/archive_version.py v{N} "설명"` 을 실행하세요
> (자세한 절차는 [output/history/README.md](output/history/README.md)).

---

## 8. 검토했으나 보류한 항목

### 8-1. Industry Action (동종업종 동반 상승) — 보류 (26.08.04)

같은 업종 종목들이 당일 동반 상승했는지를 매수 조건에 추가하는 아이디어. 검토 결과
**데이터 한계로 이번 버전에서는 보류**했습니다.

- **확보 가능**: 네이버 업종별시세(`sise_group.naver?type=upjong`, 79개 업종 그룹)를
  스크래핑하면 종목→업종 매핑을 얻을 수 있음을 실제로 확인
- **한계**: 이 매핑은 **현재 시점 스냅샷만** 가능. 과거 시점의 업종 변경(합병·사업변경·
  신규상장) 이력을 얻을 방법이 없어, 10년 전체 기간에 현재 분류를 소급 적용해야 함
- **판정안(재검토 시)**: 같은 업종에서 데이터가 있는 종목이 3개 이상이고, 그중 50% 이상이
  당일 종가 기준 상승 시 통과
- 재검토할 때 위 스크래핑 경로를 그대로 쓸 수 있습니다

### 8-2. RS 고정 임계값 방식 — 미채택

"RS 80점 이상" 같은 절대 기준도 후보였으나, 지수 대비 상대 비교가 시장 국면에 자동으로
적응한다는 점에서 §3-2 방식을 택했습니다.

---

## 부록: 함정 체크리스트 (v2 현재 상태)

| 항목 | 상태 |
|---|---|
| **미래참조** — 종가 확인 후 당일 종가 매수 | ⚠️ 존재. 슬리피지로 일부 흡수 가정 (§3-5) |
| **생존편향** — 상폐 종목 누락 | ⚠️ 존재. 대형주 한정이라 영향은 제한적 (§1-1) |
| **유동성** — 소형주에 12.5% 투입 | ✅ v3에서 시총 1조 하한 복원으로 해소 (§1-1) |
| **거래비용** — 회전율 대비 비용 드래그 | ⚠️ v1 기준 연 7.1%. 회전율이 늘면 급격히 악화 |
| **상하한가** — 상한가 마감 종목 매수 | ✅ 제외 처리 (§3-4) |
| **look-ahead 유니버스** | ✅ 월말 시점 기준 재구성 |
| **과최적화** | ⚠️ In/Out-of-Sample 분할 검증 미실시 |
